--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
   <!-- Your code here -->
-<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="yawning male lion">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="alt=yawning male lion">
 </body>
 </html>
